--- a/.github/workflows/ci-build-and-deploy.yml
+++ b/.github/workflows/ci-build-and-deploy.yml
@@ -1,77 +1,36 @@
-name: CI/CD Build and Deploy
+name: CI - Build & Deploy (Direct)
 
 on:
   push:
-    branches:
-      - main
-
-env:
-  CI_REPO: https://github.com/shinojl4dx/ticket-CI.git
-  CD_REPO: https://${{ secrets.GITOPS_REPO_TOKEN }}@github.com/shinojl4dx/ticket-CD.git
-  CD_DIR: /tmp/gitops
-  # Env corrected
+    branches: [main]
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: self-hosted
+    labels: [jump, k8s, amazon-linux]
+
+    env:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
     steps:
-      # 1️⃣ Checkout CI repository
-      - name: Checkout CI repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # 2️⃣ Set SHA tag
-      - name: Set SHA_TAG
-        id: vars
-        run: echo "SHA_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
-      # 3️⃣ Log in to Docker Hub
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # 4️⃣ Build and push frontend image
-      - name: Build and Push Frontend Image
+      - name: Verify runner identity
         run: |
-          docker build -t shinojl4dx/frontend:${SHA_TAG} ./frontend
-          docker push shinojl4dx/frontend:${SHA_TAG}
+          hostname
+          whoami
+          kubectl get nodes
 
-      # 5️⃣ Build and push login-be image
-      - name: Build and Push Login-BE Image
-        run: |
-          docker build -t shinojl4dx/login-be:${SHA_TAG} ./login-be
-          docker push shinojl4dx/login-be:${SHA_TAG}
+      - name: Make script executable
+        run: chmod +x scripts/build-and-push.sh
 
-      # 6️⃣ Clone CD repo
-      - name: Clone CD repository
-        run: |
-          git clone $CD_REPO $CD_DIR
-          cd $CD_DIR
-          git config user.email "ci-bot@example.com"
-          git config user.name "CI Bot"
+      - name: Build and push Docker images
+        run: ./scripts/build-and-push.sh
 
-      # 7️⃣ Copy updated manifests from CI to CD repo
-      - name: Copy Kubernetes manifests to CD Repo (apps/ticket-app path)
+      - name: Deploy to Kubernetes
         run: |
-          mkdir -p $CD_DIR/apps/ticket-app
-          cp -r k86/*.yaml $CD_DIR/apps/ticket-app/
-
-      # 8️⃣ Update manifests with new SHA tag
-      - name: Update manifests with SHA tag
-        run: |
-          cd $CD_DIR/apps/ticket-app
-          if [ ! -f frontend.yaml ]; then echo "❌ frontend.yaml not found"; exit 1; fi
-          if [ ! -f backend.yaml ]; then echo "❌ backend.yaml not found"; exit 1; fi
-          sed -i "s|shinojl4dx/frontend:.*|shinojl4dx/frontend:${SHA_TAG}|g" frontend.yaml
-          sed -i "s|shinojl4dx/login-be:.*|shinojl4dx/login-be:${SHA_TAG}|g" backend.yaml
-          
-
-      # 9️⃣ Commit and push updated manifests
-      - name: Commit and Push Changes to CD Repo
-        run: |
-          cd $CD_DIR
-          git add apps/ticket-app/frontend.yaml apps/ticket-app/backend.yaml
-          git commit -m "Update images to ${SHA_TAG} [ci skip]" || echo "No changes to commit"
-          git push origin main
+          kubectl apply -f k86/
+          kubectl rollout status deployment/frontend
+          kubectl rollout status deployment/backend
