fixed the issue with the build deploy runner file that allows the script access in the root directory, and formatted echo messages in build-deploy script

--- a/.github/workflows/ci-build-and-deploy.yml
+++ b/.github/workflows/ci-build-and-deploy.yml
@@ -24,13 +24,13 @@ jobs:
           kubectl get nodes
 
       - name: Make script executable
-        run: chmod +x scripts/build-and-push.sh
+        run: chmod +x ./build-and-push.sh
 
       - name: Build and push Docker images
-        run: ./scripts/build-and-push.sh
+        run: ./build-and-push.sh
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k86/
+          kubectl apply -f k8s/
           kubectl rollout status deployment/frontend
           kubectl rollout status deployment/backend
