--- a/.github/workflows/ci-build-and-deploy.yml
+++ b/.github/workflows/ci-build-and-deploy.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
+      GITOPS_REPO_TOKEN: ${{ secrets.GITOPS_REPO_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
