--- a/.github/workflows/ci-build-and-deploy.yml
+++ b/.github/workflows/ci-build-and-deploy.yml
@@ -2,17 +2,21 @@ name: CI - Build & Deploy (Direct)
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   deploy:
-    runs-on: self-hosted
-    labels: [jump, k8s, amazon-linux]
+    runs-on:
+      - self-hosted
+      - jump
+      - k8s
+      - amazon-linux
 
     env:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       GITOPS_REPO_TOKEN: ${{ secrets.GITOPS_REPO_TOKEN }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
